<resources>
    <string name="app_name">Pay Mobile</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="action_settings">Settings</string>

    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_to_register">Not a member? Get registered in Pay Mobile now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!--Material Design -->
    <string name="action_cart">Cart</string>
    <string name="action_vehicle">Vehicle</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_store">New Releases</string>
    <string name="nav_item_products">Products</string>
    <string name="nav_item_address">Adresses</string>
    <string name="nav_item_vehicles">Vehicles</string>
    <string name="nav_item_checkouts">Checkouts</string>


    <string name="title_vehicles">Vehicle</string>
    <string name="title_products">Products</string>
    <string name="title_address">Address</string>
    <string name="title_checkouts">Checkouts</string>
    <string name="contact_developer">Contact Developer</string>
    <string name="action_personal_data">Personal Data</string>
    <string name="about">About</string>


    <string name="map">Map</string>
    <string name="click_on_back_button">Click on Back Button</string>
    <string name="click_on_settings_button">Click on Settings Button</string>
    <string name="click_on_vehicle_button">Click on Car Button</string>
    <string name="click_on_developer_button">Click on Contact Developer Button</string>
    <string name="click_on_personalData_button">Click on Personal Data Button</string>
    <string name="version_of_app">Version of App:</string>
    <string name="keyUp_back_button">KeyUp Back Button Pressed</string>
    <string name="keyUp_home_button">KeyUp Home Button Pressed</string>
    <string name="keyUp_search_button">KeyUp Search Button Pressed</string>
    <string name="enter_email_address">Enter email address!</string>
    <string name="enter_password">Enter password!</string>
    <string name="could_not_authorize">Could not authorize the Customer, contact the system developer</string>
    <string name="connected_on_internet">Connected to Internet</string>
    <string name="not_connected_on_internet">Not connected to internet</string>
    <string name="auth_error">There was a failed authentication.</string>
    <string name="register">Register</string>
    <string name="click_on_cart_button">Click on Cart Button</string>



    <string name="checkout_success">Order successfully Requested! We will contact you to confirm scheduling.</string>
    <string name="checkout_failed">Could not complete your request, try again later.</string>
    <string name="cart_is_empty">Empty Cart</string>
    <string name="product_details">Product Details</string>
    <string name="update_email_sucess">Email address has been updated. Please enter the new email id!</string>
    <string name="update_email_failed">Failed to update Email!</string>
    <string name="password_update_sucess">Password Updated, Enter new Password!</string>
    <string name="password_update_failed">Failed to update the password!</string>
    <string name="reset_email_sucess">Email password reset was sent!</string>
    <string name="reset_email_failed">Failed to send reset email!</string>
    <string name="delete_account_success">Your profile has been deleted :( Create an account now!</string>
    <string name="delete_account_failed">Failed to delete your account!</string>
    <string name="no_email_client_installed">There are no email clients installed.</string>
    <string name="permission_granted">Permissions Granted!</string>
    <string name="permission_accepted">Accepted the permission.</string>
    <string name="permission_not_accepted">Not accepted permission.</string>
    <string name="send_mail_to_developer">Send an email to the developer ...</string>
    <string name="service_selected">Service Selected</string>
    <string name="remove">Removed</string>
    <string name="enter_email_address_id">Enter your registered email id</string>
    <string name="reset_password_success">We have sent you instructions to reset your password!</string>
    <string name="reset_password_failed">Failed to send reset email!</string>
    <string name="repeat_register_operation">Please Repeat the Signup Operation</string>
    <string name="process_finish">Process Finish</string>
    <string name="processing">Processing</string>
    <string name="logo">Logo</string>
    <string name="hint_cep">Insert a New Cep</string>
    <string name="hint_street">Insert a New Street</string>
    <string name="hint_neighborhood">Insert a New Neighborhood</string>
    <string name="hint_number">Insert a New Number</string>
    <string name="hint_complement">Insert a New Complement</string>
    <string name="hint_cpf">Insert a Cpf Number</string>
    <string name="hint_mobilePhone">Insert Your Mobile Phone Number</string>
    <string name="hint_phone">Inser Your Phone Number</string>
    <string name="err_msg_name">Invalid String for Name</string>
    <string name="err_msg_cpf">Invalid Value for CPF</string>
    <string name="err_msg_phone">Invalue Value for Phone</string>
    <string name="err_msg_cep">Invalid Value for Cep</string>
    <string name="err_msg_street">Invalid Value for Street</string>
    <string name="err_msg_neighborhood">Invalid String for Neighborhood</string>
    <string name="err_msg_complement">Invalid Value for Complement</string>
    <string name="err_msg_number">Invalid Value for Street</string>
    <string name="Save">Save</string>
    <string name="Delete">Delete</string>

    <string name="title_news">News</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Opções</string>
    <string name="action_details">Details</string>
    <string name="action_share">Share</string>
    <string name="action_photo_library">Photo Library</string>
    <string name="delete">Delete</string>
    <string name="produtos">PRODUTOS</string>
    <string name="action_search">Search</string>
    <string name="backdrop_title">Title Subtitle</string>
    <string name="backdrop_subtitle">Subtitle</string>
    <string name="stub_text_title">Title</string>
    <string name="stub_text_content">Texto</string>

    <!-- Card -->
    <string name="card_header" translatable="false">NFN CARD</string>
    <string name="card_number_sample" translatable="false">XXXX XXXX XXXX XXXX</string>
    <string name="card_validity_label">VALID UPTO</string>
    <string name="card_validity_sample">MM/YY</string>
    <string name="card_name_sample">CARD HOLDER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="card_holders_name">Card Holder\'s Name</string>
    <string name="card_number">Card Number</string>
    <string name="card_validity">Expires</string>
    <string name="card_cvv">CVV/CVC Number</string>
    <string name="proceed_payment">PROCEED PAYMENT</string>
    <string name="enter_valid_cc_name">Enter Valid Name</string>
    <string name="enter_valid_cc_number">Enter Valid card number</string>
    <string name="enter_valid_cc_validity">Enter correct validity</string>
    <string name="enter_valid_cc_cvv">Enter valid security number</string>
    <string name="your_card_is_added">Your card is added</string>
    <string name="name_on_card">Name on card</string>
    <string name="cvv_cvc" translatable="false">CVV/CVC</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="payment_received">PAYMENT RECEIVED</string>
    <string name="thank_you">THANK YOU</string>
    <string name="order_id">Order Id</string>
    <string name="your_cart_is_empty">Your Cart is Empty now</string>
    <string name="action_undo">UNDO</string>
    <string name="removed_from_cart">removed from cart!</string>
    <string name="order_details">Order Details</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="cart_items">Cart items</string>
    <string name="header_token" translatable="false">PayWithRuby-Auth-Token</string>
    <string name="header_version" translatable="false">1.0</string>
    <string name="logout">Logout</string>
    <string name="new_release_products">New Release Products</string>
    <string name="price_symbol">$</string>
    <string name="search_hint">Find</string>
    <string name="user_or_password_incorrect">User or Password Incorrect</string>
    <string name="token_expired">Token has Expired, try loggin again</string>
    <string name="next">NEXT</string>
    <string name="submit">SUBMIT</string>
</resources>


