<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.activity.MainActivity">

    <item
        android:id="@+id/action_filter_search"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_search_white_48dp"
        app:showAsAction="collapseActionView|always" />


    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_action_cart"
        android:orderInCategory="100"
        android:name="@string/action_cart"
        android:title="@string/action_cart"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_personal_data"
        android:icon="@drawable/ic_action_account"
        android:orderInCategory="100"
        android:name="@string/action_personal_data"
        android:title="@string/action_personal_data"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="100"
        android:name="@string/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contact_developer"
        android:icon="@drawable/ic_action_contact_code"
        android:orderInCategory="100"
        android:name="@string/contact_developer"
        android:title="@string/contact_developer"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_action_contact_code"
        android:orderInCategory="100"
        android:name="@string/about"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:name="@string/logout"
        android:title="@string/logout"
        app:showAsAction="never" />


</menu>