<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordlayoutNewAddress"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true">

     <include
       layout="@layout/collapse_toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

       >


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:animateLayoutChanges="true"
        tools:context=".view.activity.shoppingCart.ShoppingCartActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_cep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp">

            <EditText
                android:id="@+id/editTextCep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_cep"
                android:numeric="integer"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_street"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_below="@+id/input_layout_cep"
            >

            <EditText
                android:id="@+id/editTextStreet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_street"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_neighborhood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_below="@+id/input_layout_street"
            >

            <EditText
                android:id="@+id/editTextNeighborhood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_neighborhood"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_complement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_below="@+id/input_layout_neighborhood"
            >

            <EditText
                android:id="@+id/editTextComplement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_complement" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_below="@+id/input_layout_complement"
            >

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_number"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Save"
            android:id="@+id/buttonSave"
            android:layout_below="@+id/input_layout_number"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonSave"
            android:text="Delete"
            android:id="@+id/buttonDelete"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
